# code-manager

./: .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  Makefile  README.md  README.zh-CN.md  TODO.md  biome.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.test.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/hooks/: bash-policy.mjs  pre-push-verify.mjs  stop-quality-reminder.mjs
.claude/rules/: agent-memory-layout.md  config-system.md  frontend-ui.md  history-stats-usage.md  memory-and-skills.md  projects-tray-diagnostics.md  tauri-backend.md
.github/: dependabot.yml
.github/workflows/: ci.yml  commitlint.yml  deploy-site.yml  release.yml  update-homebrew-cask.yml
docs/: claude-code-best-practices.md  i18n.md  platform-support.md  platform-support.zh-CN.md  user-manual.md  user-manual.zh-CN.md
docs/claude-code/: plugin-update.md
docs/plans/: 2026-02-22-add-hascompleteonboarding-config-design.md  2026-02-22-add-hascompleteonboarding-config.md  2026-02-22-default-config-design.md  2026-02-22-ui-redesign-design.md  2026-02-22-ui-redesign.md  2026-02-27-code-quality-robustness-design.md  2026-02-27-code-quality-robustness-plan.md  2026-03-01-memory-editor-markdown-highlight-design.md  2026-03-01-memory-editor-markdown-highlight.md  2026-03-02-stats-page-design.md  2026-03-02-stats-page-plan.md  2026-03-08-skills-management-design.md  2026-03-08-skills-management.md  2026-03-09-history-page-design.md  2026-03-09-history-page-plan.md  2026-03-10-session-detail-drawer-design.md  2026-03-11-session-detail-ui-optimization-design.md  2026-03-11-session-detail-ui-optimization.md  2026-03-14-tool-result-full-content-markdown-design.md  2026-03-14-tool-result-full-content-markdown.md  2026-03-15-config-preview-editable-design.md  2026-03-15-config-preview-editable.md  2026-03-15-tray-title-active-config-design.md  2026-03-15-tray-title-setting-design.md  2026-05-03-usage-cost-calculation-design.md  2026-05-11-skill-ui-imporve-design.md
scripts/: check-i18n.mjs  sync-cheatsheet.mjs
site/: README.md  index.html
src/: App.css  App.test.tsx  App.tsx  bindings.ts  history-utils.test.ts  history-utils.ts  i18n-audit.test.ts  i18n.test.tsx  i18n.ts  index.css  ipc-usage-contract.test.ts  ipc.test.ts  ipc.ts  main.tsx  react-syntax-highlighter-deep-imports.d.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  widget.json
src-tauri/examples/: generate_bindings.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: builtin-providers.json  model-pricing.json
src-tauri/resources/statusline/: default.ps1  default.sh
src-tauri/src/: auto_memory.rs  claude_directory.rs  claude_directory_watcher.rs  config.rs  error.rs  history.rs  led.rs  lib.rs  logging.rs  macos_notifications.rs  main.rs  memory.rs  migration.rs  native_i18n.rs  native_open.rs  plugins.rs  project.rs  provider.rs  skills.rs  sound.rs  stats.rs  terminal_focus.rs  tray.rs  usage.rs  utils.rs  widget.rs  work_summary.rs
src-tauri/tests/: history_e2e.rs  profile_apply_e2e.rs  stats_e2e.rs  work_summary_conversation_e2e.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: claude-settings.example.json  config-registry.example.json
src/components/: ClaudeOverviewPage.css  ClaudeOverviewPage.tsx  CollapsibleSection.tsx  ConfigEditor.css  ConfigEditor.tsx  ConfigItem.css  ConfigItem.tsx  ConfigList.css  ConfigList.tsx  ConfigModal.css  ConfigModal.tsx  ConfigPreview.tsx  ConfigPreviewCodeEditor.tsx  ConfigSectionTabs.tsx  ConfirmAlertDialog.tsx  ConfirmDialog.css  ConfirmDialog.tsx  ConversationSearch.tsx  ConversationSearchBar.tsx  DefaultsSection.tsx  Drawer.tsx  EmptyState.tsx  ErrorBoundary.tsx  HistoryHeatmap.tsx  HistoryPage.css  HistoryPage.tsx  HistoryProjectList.tsx  HistorySessionList.tsx  Icons.tsx  LaunchCommandBlock.tsx  LogViewer.css  LogViewer.tsx  MemoryEditor.css  MemoryEditor.tsx  MemoryItem.css  MemoryItem.tsx  MemoryModal.css  MemoryModal.tsx  MemoryPage.css  MemoryPage.tsx  (+72 more)
src/hooks/: useAnimatedNumber.ts  useAppUpdater.ts  useCodeMirrorTheme.ts  useEditorTheme.ts  useEscapeKey.ts  useHistoryEntries.ts  useIsDark.ts  useIsNarrowViewport.ts  useSummaryConversation.ts  useTauriEvent.ts  useToast.tsx  useUrlState.ts  useUsage.ts  useWidgetUsageKpi.ts  useWorkSummaries.ts
src/i18n/: format.test.ts  format.ts
src/lib/: user-facing-error.ts  (+1 more)
(+279 files in other folders)
