[package]
name = "ai-manager"
version = "0.16.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
log = "0.4"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
once_cell = "1"
regex = "1"
fancy-regex = "0.14"
schemars = { version = "0.8", features = ["preserve_order"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
notify = "8"
tauri-plugin-sql = { version = "2.4.0", default-features = false, features = ["sqlite"] }
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["sync"] }
