[package]
name = "code-manager"
version = "0.20.1"
description = "Code Manager - Claude Code 桌面配置管理应用"
authors = ["maguowei"]
license = "MIT"
repository = "https://github.com/maguowei/code-manager"
edition = "2021"
default-run = "code-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "code_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api：浮窗需要 transparent(true) 实现圆角半透明效果，macOS 上依赖该 feature
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
log = "0.4"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
once_cell = "1"
# 跨平台判断两路径是否指向同一份文件数据(含 hard link)：Windows 用 GetFileInformationByHandle
same-file = "1"
regex = "1"
fancy-regex = "0.18"
schemars = { version = "1.2.1", features = ["preserve_order"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }
notify = "8"
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["sync"] }
# tauri-specta v2 仍在 RC 阶段(社区主流,Tauri 2 唯一可用端到端类型化方案);版本必须 exact match
# specta 的 serde_json feature 让 `serde_json::Value` 字段能被 #[derive(Type)] 接受
specta = { version = "=2.0.0-rc.25", features = ["serde_json"] }
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

[target.'cfg(target_os = "macos")'.dependencies]
# USB HID 控制 ANTICATER LED;仅 macOS 接入真机,避免 Linux 引入 libudev 系统依赖
hidapi = "2"
block2 = "0.6.2"
objc2 = { version = "0.6.4", features = ["exception"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSBundle", "NSDictionary", "NSError", "NSObject", "NSString"] }
objc2-user-notifications = { version = "0.3.2", default-features = false, features = ["block2", "UNNotification", "UNNotificationContent", "UNNotificationRequest", "UNNotificationResponse", "UNNotificationTrigger", "UNUserNotificationCenter"] }

# 集成测试依赖（仅 tests/ 下使用）
[dev-dependencies]
tempfile = "3"
# 互斥 CODE_MANAGER_HOME_OVERRIDE / CODE_MANAGER_APP_DATA_DIR_OVERRIDE 等 env override
serial_test = "3"
